@@ -1,4 +1,9 @@
 0.5.0
+Done copy filepath/dirpath/filename.
+Started tab context menu.
+Done select tab.
+Done sort tabs.
+Fixed double ask save file.
 Done find/find next/find replace.
 Done saving files and quit.
 Done quit.
